force-app/main/default/objects/Store_Review__c/Store_Review__c.object-meta.xml
<CustomObject>
    <description>SV daily reviews of store performance - SV店舗パフォーマンス日次レビュー</description>
    <label>店舗レビュー</label>
    <nameField>
        <displayFormat>SR-{00000}</displayFormat>
        <label>レビュー番号</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>店舗レビュー</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>