force-app/main/default/objects/Store_Review__c/fields/Action_Items__c.field-meta.xml
<CustomField>
    <fullName>Action_Items__c</fullName>
    <label>アクションアイテム</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>