force-app/main/default/objects/Store_Review__c/fields/Key_Issues__c.field-meta.xml
<CustomField>
    <fullName>Key_Issues__c</fullName>
    <label>主要課題</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>