force-app/main/default/objects/Store_Review__c/fields/Recommendations__c.field-meta.xml
<CustomField>
    <fullName>Recommendations__c</fullName>
    <label>推奨事項</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>