force-app/main/default/objects/Store_Review__c/fields/Review_Date__c.field-meta.xml
<CustomField>
    <fullName>Review_Date__c</fullName>
    <label>レビュー日</label>
    <required>true</required>
    <type>Date</type>
</CustomField>