force-app/main/default/objects/Store_Review__c/fields/Review_Status__c.field-meta.xml
<CustomField>
    <fullName>Review_Status__c</fullName>
    <label>レビュー状況</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Draft</fullName>
                <default>true</default>
                <label>下書き</label>
            </value>
            <value>
                <fullName>Submitted</fullName>
                <label>提出済み</label>
            </value>
            <value>
                <fullName>Acknowledged</fullName>
                <label>確認済み</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>