force-app/main/default/objects/Store_Review__c/fields/Store__c.field-meta.xml
<CustomField>
    <fullName>Store__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <label>店舗</label>
    <referenceTo>Store__c</referenceTo>
    <relationshipLabel>店舗レビュー</relationshipLabel>
    <relationshipName>Store_Reviews</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>