force-app/main/default/objects/Store_Review__c/fields/Summary__c.field-meta.xml
<CustomField>
    <fullName>Summary__c</fullName>
    <label>サマリー</label>
    <type>TextArea</type>
</CustomField>