force-app/main/default/objects/Store_Review__c/fields/Supervisor__c.field-meta.xml
<CustomField>
    <fullName>Supervisor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>担当SV</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Store_Reviews</relationshipName>
    <type>Lookup</type>
</CustomField>